@@ -2,7 +2,7 @@
 # This function powers \code{\link{stat_bin}}R
 #
 # @keyword internal
-bin <- function(x, weight=NULL, binwidth=NULL, origin=NULL, breaks=NULL, range=NULL, width=0.9) {
+bin <- function(x, weight=NULL, binwidth=NULL, origin=NULL, breaks=NULL, range=NULL, width=0.9, drop = FALSE) {
   
   if (is.null(weight))  weight <- rep(1, length(x))
   weight[is.na(weight)] <- 0
@@ -38,12 +38,14 @@ bin <- function(x, weight=NULL, binwidth=NULL, origin=NULL, breaks=NULL, range=N
     width = width
   )
 
-  within(results, {
+  res <- within(results, {
     count[is.na(count)] <- 0
     density <- count / width / sum(count, na.rm=TRUE)
     ncount <- count / max(count, na.rm=TRUE)
     ndensity <- density / max(density, na.rm=TRUE)
   })
+  if (drop) res <- subset(res, count > 0)
+  res
 }
 
 # Generate sequence of fixed size intervals covering range
@@ -69,7 +71,7 @@ StatBin <- proto(Stat, {
     .super$calculate_groups(., data, ...)
   }
   
-  calculate <- function(., data, scales, binwidth=NULL, origin=NULL, breaks=NULL, width=0.9, ...) {
+  calculate <- function(., data, scales, binwidth=NULL, origin=NULL, breaks=NULL, width=0.9, drop = FALSE, ...) {
     range <- scales$get_scales("x")$output_set()
 
     if (is.null(breaks) && is.null(binwidth) && !is.integer(data$x) && !.$informed) {
@@ -77,7 +79,7 @@ StatBin <- proto(Stat, {
       .$informed <- TRUE
     }
     
-    bin(data$x, data$weight, binwidth=binwidth, origin=origin, breaks=breaks, range=range, width=width)
+    bin(data$x, data$weight, binwidth=binwidth, origin=origin, breaks=breaks, range=range, width=width, drop = FALSE)
   }
 
   objname <- "bin" 
