@@ -1,6 +1,7 @@
 ggplot2 0.7.1  (2008-XX)
 ----------------------------------------
 
+* geom_bin: gains drop argument to control whether or not 0 count bins should be removed
 * geom_hexbin & stat_hexbin: hexagonal binning and drawing
 * geom_bin2d: 2d binning
 * stat_bin: correctly returns 0 when no observations in a bin (was previously returning NA)
